--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                   <div class="portfolio-item">
                     <div class="portfolio-item-photo"><a href="#"><img src="img/portfolio-screen1.jpg" alt="" /></a></div>
                     <div class="portfolio-item-detail">
-                      <div class="portfolio-item-title primary-link"><a href="#">Polychromatic Logo</a></div>
+                      <div class="portfolio-item-title primary-link"><a href="https://dewan-storegg.vercel.app/">Polychromatic Logo</a></div>
                       <div class="portfolio-item-descr">Branding Design</div>
                     </div>
                   </div>
