--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Paul, Logan Cee">
     <link rel="shortcut icon" href="favicon/favicon.ico"/>
 
-    <title>Dewantoro | Portofolio</title>
+    <title>Dewantoro | Portfolio</title>
 
     <!-- CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -322,10 +322,10 @@
                 </div>
                 <div class="portfolio-carousel a-portfolio-carousel owl-carousel owl-theme animate-element delay7 fadeInUp">
                   <div class="portfolio-item">
-                    <div class="portfolio-item-photo"><a href="#"><img src="img/portfolio-screen1.jpg" alt="" /></a></div>
+                    <div class="portfolio-item-photo"><a href="https://dewan-storegg.vercel.app"><img src="img/portfolio-screen1.jpg" alt="" /></a></div>
                     <div class="portfolio-item-detail">
                       <div class="portfolio-item-title primary-link"><a href="https://dewan-storegg.vercel.app/">Polychromatic Logo</a></div>
-                      <div class="portfolio-item-descr">Branding Design</div>
+                      <div class="portfolio-item-descr">Websites Topup Voucher Game</div>
                     </div>
                   </div>
                   <div class="portfolio-item">
