--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                   <div class="portfolio-item">
                     <div class="portfolio-item-photo"><a href="https://dewan-storegg.vercel.app"><img src="img/portfolio-screen1.jpg" alt="" /></a></div>
                     <div class="portfolio-item-detail">
-                      <div class="portfolio-item-title primary-link"><a href="https://dewan-storegg.vercel.app/">Polychromatic Logo</a></div>
+                      <div class="portfolio-item-title primary-link"><a href="https://dewan-storegg.vercel.app/">Store GG</a></div>
                       <div class="portfolio-item-descr">Websites Topup Voucher Game</div>
                     </div>
                   </div>
@@ -341,91 +341,7 @@
                       <div class="portfolio-item-title primary-link"><a href="#">Clemo – Fashion Template</a></div>
                       <div class="portfolio-item-descr">UX/UI Design</div>
                     </div>
-                  </div>
-                  <div class="portfolio-item">
-                    <div class="portfolio-item-photo"><a href="#"><img src="img/portfolio-screen1.jpg" alt="" /></a></div>
-                    <div class="portfolio-item-detail">
-                      <div class="portfolio-item-title primary-link"><a href="#">Polychromatic Logo</a></div>
-                      <div class="portfolio-item-descr">Branding Design</div>
-                    </div>
-                  </div>
-                  <div class="portfolio-item">
-                    <div class="portfolio-item-photo"><a href="#"><img src="img/portfolio-screen2.jpg" alt="" /></a></div>
-                    <div class="portfolio-item-detail">
-                      <div class="portfolio-item-title primary-link"><a href="#">TextBook Redesign Acquisition</a></div>
-                      <div class="portfolio-item-descr">UX/UI Design</div>
-                    </div>
-                  </div>
-                  <div class="portfolio-item">
-                    <div class="portfolio-item-photo"><a href="#"><img src="img/portfolio-screen3.jpg" alt="" /></a></div>
-                    <div class="portfolio-item-detail">
-                      <div class="portfolio-item-title primary-link"><a href="#">Clemo – Fashion Template</a></div>
-                      <div class="portfolio-item-descr">UX/UI Design</div>
-                    </div>
-                  </div>
-                  <div class="portfolio-item">
-                    <div class="portfolio-item-photo"><a href="#"><img src="img/portfolio-screen1.jpg" alt="" /></a></div>
-                    <div class="portfolio-item-detail">
-                      <div class="portfolio-item-title primary-link"><a href="#">Polychromatic Logo</a></div>
-                      <div class="portfolio-item-descr">Branding Design</div>
-                    </div>
-                  </div>
-                  <div class="portfolio-item">
-                    <div class="portfolio-item-photo"><a href="#"><img src="img/portfolio-screen2.jpg" alt="" /></a></div>
-                    <div class="portfolio-item-detail">
-                      <div class="portfolio-item-title primary-link"><a href="#">TextBook Redesign Acquisition</a></div>
-                      <div class="portfolio-item-descr">UX/UI Design</div>
-                    </div>
-                  </div>
-                  <div class="portfolio-item">
-                    <div class="portfolio-item-photo"><a href="#"><img src="img/portfolio-screen3.jpg" alt="" /></a></div>
-                    <div class="portfolio-item-detail">
-                      <div class="portfolio-item-title primary-link"><a href="#">Clemo – Fashion Template</a></div>
-                      <div class="portfolio-item-descr">UX/UI Design</div>
-                    </div>
-                  </div>
-                  <div class="portfolio-item">
-                    <div class="portfolio-item-photo"><a href="#"><img src="img/portfolio-screen1.jpg" alt="" /></a></div>
-                    <div class="portfolio-item-detail">
-                      <div class="portfolio-item-title primary-link"><a href="#">Polychromatic Logo</a></div>
-                      <div class="portfolio-item-descr">Branding Design</div>
-                    </div>
-                  </div>
-                  <div class="portfolio-item">
-                    <div class="portfolio-item-photo"><a href="#"><img src="img/portfolio-screen2.jpg" alt="" /></a></div>
-                    <div class="portfolio-item-detail">
-                      <div class="portfolio-item-title primary-link"><a href="#">TextBook Redesign Acquisition</a></div>
-                      <div class="portfolio-item-descr">UX/UI Design</div>
-                    </div>
-                  </div>
-                  <div class="portfolio-item">
-                    <div class="portfolio-item-photo"><a href="#"><img src="img/portfolio-screen3.jpg" alt="" /></a></div>
-                    <div class="portfolio-item-detail">
-                      <div class="portfolio-item-title primary-link"><a href="#">Clemo – Fashion Template</a></div>
-                      <div class="portfolio-item-descr">UX/UI Design</div>
-                    </div>
-                  </div>
-                  <div class="portfolio-item">
-                    <div class="portfolio-item-photo"><a href="#"><img src="img/portfolio-screen1.jpg" alt="" /></a></div>
-                    <div class="portfolio-item-detail">
-                      <div class="portfolio-item-title primary-link"><a href="#">Polychromatic Logo</a></div>
-                      <div class="portfolio-item-descr">Branding Design</div>
-                    </div>
-                  </div>
-                  <div class="portfolio-item">
-                    <div class="portfolio-item-photo"><a href="#"><img src="img/portfolio-screen2.jpg" alt="" /></a></div>
-                    <div class="portfolio-item-detail">
-                      <div class="portfolio-item-title primary-link"><a href="#">TextBook Redesign Acquisition</a></div>
-                      <div class="portfolio-item-descr">UX/UI Design</div>
-                    </div>
-                  </div>
-                  <div class="portfolio-item">
-                    <div class="portfolio-item-photo"><a href="#"><img src="img/portfolio-screen3.jpg" alt="" /></a></div>
-                    <div class="portfolio-item-detail">
-                      <div class="portfolio-item-title primary-link"><a href="#">Clemo – Fashion Template</a></div>
-                      <div class="portfolio-item-descr">UX/UI Design</div>
-                    </div>
-                  </div>
+                  </div>               
                 </div>
               </div>
             </div>
@@ -646,7 +562,7 @@
             </div>
           </div> -->
 
-          <div class="section pp-scrollable slide slide-contacts a-slide-typed" data-name="contacts">
+          <div class="section pp-scrollable slide slide-contacts a-slide-typed" data-name="contact">
             <div class="slide-container">
               <div class="lines"><div></div><div></div><div></div><div></div></div>
               <div class="contact-ornament"></div>
