--- a/index.html
+++ b/index.html
@@ -331,15 +331,15 @@
                   <div class="portfolio-item">
                     <div class="portfolio-item-photo"><a href="#"><img src="img/portfolio-screen2.jpg" alt="" /></a></div>
                     <div class="portfolio-item-detail">
-                      <div class="portfolio-item-title primary-link"><a href="#">TextBook Redesign Acquisition</a></div>
-                      <div class="portfolio-item-descr">UX/UI Design</div>
+                      <div class="portfolio-item-title primary-link"><a href="#">Home Loans</a></div>
+                      <div class="portfolio-item-descr">Websites Untuk Pengajuan KPR Rumah</div>
                     </div>
                   </div>
                   <div class="portfolio-item">
                     <div class="portfolio-item-photo"><a href="#"><img src="img/portfolio-screen3.jpg" alt="" /></a></div>
                     <div class="portfolio-item-detail">
-                      <div class="portfolio-item-title primary-link"><a href="#">Clemo – Fashion Template</a></div>
-                      <div class="portfolio-item-descr">UX/UI Design</div>
+                      <div class="portfolio-item-title primary-link"><a href="#">Kasir App</a></div>
+                      <div class="portfolio-item-descr">Aplikasi Kasir Untuk Input Pesanan</div>
                     </div>
                   </div>               
                 </div>
