--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
 
           <div class="menu">
             
-
             <div class="menu-main" id="accordion">
               <ul id="menuMain">
                 <li data-menuanchor="About" class="active"><a href="#About">About</a></li>
@@ -329,16 +328,16 @@
                     </div>
                   </div>
                   <div class="portfolio-item">
-                    <div class="portfolio-item-photo"><a href="#"><img src="img/portfolio-screen2.jpg" alt="" /></a></div>
+                    <div class="portfolio-item-photo"><a href="http://frontend-b-home-loans-dot-rakamin-322505.et.r.appspot.com/login"><img src="img/portfolio-screen2.jpg" alt="" /></a></div>
                     <div class="portfolio-item-detail">
-                      <div class="portfolio-item-title primary-link"><a href="#">Home Loans</a></div>
+                      <div class="portfolio-item-title primary-link"><a href="http://frontend-b-home-loans-dot-rakamin-322505.et.r.appspot.com/login">Home Loans</a></div>
                       <div class="portfolio-item-descr">Websites Untuk Pengajuan KPR Rumah</div>
                     </div>
                   </div>
                   <div class="portfolio-item">
-                    <div class="portfolio-item-photo"><a href="#"><img src="img/portfolio-screen3.jpg" alt="" /></a></div>
+                    <div class="portfolio-item-photo"><a href="https://kasir-app-gamma.vercel.app/#home"><img src="img/portfolio-screen3.jpg" alt="" /></a></div>
                     <div class="portfolio-item-detail">
-                      <div class="portfolio-item-title primary-link"><a href="#">Kasir App</a></div>
+                      <div class="portfolio-item-title primary-link"><a href="https://kasir-app-gamma.vercel.app/#home">Kasir App</a></div>
                       <div class="portfolio-item-descr">Aplikasi Kasir Untuk Input Pesanan</div>
                     </div>
                   </div>               
